# contextspy

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  NOTICE  PLAN.md  README.md  SPEC.md  contextspy.spec  domain-refactoring-plan.md  multifile-release-plan.md  plan-proxyEnvVarInjection.prompt.md  pypiplan.md  pyproject.toml  release-guide.md  websocket-support-plan.md
.claude/: settings.local.json
.github/scripts/: update-formula.py
.github/workflows/: publish.yml  release-binary.yml
brew-formula/: contextspy.rb
contextspy/: __init__.py  __main__.py  cli.py  config.py
contextspy/analysis/: blocks.py  classifier.py  providers.py  tokenizer.py
contextspy/analysis/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai_chat.py  openai_responses.py
contextspy/api/: __init__.py  main.py  websocket.py
contextspy/api/routers/: proxy.py  requests.py  sessions.py  stats.py  tokenize.py
contextspy/db/: crud.py  database.py  migrations.py  models.py
contextspy/proxy/: addon.py  cert.py  runner.py
docs/: changelog.md  cli.md  cloud-mode.md  confirmed.md  development.md  examples.md  faq.md  install.md  local-mode.md
tests/: test_providers.py
token_scrooge/: __init__.py  cli.py  config.py
token_scrooge/analysis/: classifier.py  providers.py  tokenizer.py
token_scrooge/api/: main.py
token_scrooge/api/routers/: proxy.py  requests.py  sessions.py  stats.py  tokenize.py
token_scrooge/db/: crud.py  database.py  models.py
token_scrooge/proxy/: addon.py  cert.py  runner.py
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/api/: client.ts  hooks.ts  useWebSocket.ts
ui/src/components/: ContextBar.tsx  DeleteSessionModal.tsx  Layout.tsx  ParsedViewer.tsx  RawViewer.tsx  RequestTable.tsx  SessionControls.tsx  TimeSeriesChart.tsx  TokenDonut.tsx  ToolBreakdown.tsx
ui/src/pages/: Dashboard.tsx  RequestDetail.tsx  Requests.tsx  SessionDetail.tsx  Sessions.tsx  Settings.tsx
