[project]
name = "token-scrooge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "tiktoken>=0.7",
    "typer>=0.12",
    "websockets>=12.0",
    "rich>=13.0",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
token-scrooge = "token_scrooge.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["token_scrooge*"]
