[project]
name = "contextspy"
version = "0.1.0"
description = "LLM proxy that analyses token usage in context windows"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Rimantas Zukaitis", email = "rimasz@gmail.com" },
]
keywords = ["llm", "proxy", "tokens", "observability", "mitmproxy", "context-window"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "mitmproxy>=10.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "tiktoken>=0.7",
    "typer>=0.12",
    "websockets>=12.0",
    "rich>=13.0",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/RimantasZ/contextspy"
"Bug Tracker" = "https://github.com/RimantasZ/contextspy/issues"

[project.scripts]
contextspy = "contextspy.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextspy*"]

[tool.setuptools.package-data]
contextspy = ["_web/**/*"]
